updated the app with some core changes for faster processing, divided all pages into modules

--- a/data/settings.json
+++ b/data/settings.json
@@ -4,5 +4,6 @@
   "autosave_interval": 15,
   "daily_reset_time": "21:23",
   "theme": "orange",
-  "intensity": "2"
+  "intensity": "1",
+  "dpi_scale": 100
 }
