--- a/data/tasks.json
+++ b/data/tasks.json
@@ -28,5 +28,18 @@
     "struck_date": null,
     "scheduled_date": "2025-10-17",
     "duration": 60
+  },
+  {
+    "id": "00390a53-c249-41de-be50-7113aa8f85fe",
+    "title": "tiral",
+    "description": "",
+    "completed": false,
+    "created_at": "2025-10-17T16:33:18.969484",
+    "due_date": "",
+    "project": "",
+    "scheduled_hour": null,
+    "estimated_duration": 60,
+    "struck_today": false,
+    "struck_date": null
   }
 ]
