--- a/data/tasks.json
+++ b/data/tasks.json
@@ -22,12 +22,12 @@
     "created_at": "2025-10-17T16:11:57.294293",
     "due_date": "",
     "project": "",
-    "scheduled_hour": "0:30",
+    "scheduled_hour": null,
     "estimated_duration": 60,
     "struck_today": false,
     "struck_date": null,
-    "scheduled_date": "2025-10-17",
-    "duration": 60
+    "scheduled_date": null,
+    "duration": null
   },
   {
     "id": "00390a53-c249-41de-be50-7113aa8f85fe",
